# simple-chat

./: hnsw.rs
chat-app/: Cargo.toml  README.md
chat-app/proto/: chat.proto
chat-app/src/: client.rs  lib.rs  server.rs
