[package]
name = "simple_chat"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tonic = "0.10"
prost = "0.12"
tokio-stream = "0.1"
futures-util = "0.3"
clap = { version = "4.0", features = ["derive", "env"] }
anyhow = "1.0"
chrono = "0.4"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
